# ucx

./: .clang-format  .gitignore  configure.ac  style.conf  style.sh  uncrustify.cfg
buildlib/: azure-pipelines-pr.yml
contrib/: test_jenkins.sh
src/ucp/api/: ucp.h
src/ucp/core/: ucp_ep.c
src/ucs/: Makefile.am
src/ucs/config/: parser.c  parser.h
src/ucs/memory/: rcache.c  rcache_int.h
src/ucs/profile/: profile.c
src/ucs/sys/: init.c  lib.c  lib.h  lib_util.c  lib_util.h
src/uct/api/: uct.h
src/uct/base/: uct_iface.c  uct_md.h
src/uct/ib/base/: ib_md.c  ib_md.h
src/uct/ib/dc/: dc_mlx5.c
src/uct/ib/rc/accel/: rc_mlx5_iface.c
src/uct/ib/rc/verbs/: rc_verbs_iface.c
src/uct/ib/ud/base/: ud_iface.c
src/uct/ugni/udt/: a.c
test/apps/iodemo/: Makefile.am  io_demo.cc  run_io_demo.sh
test/apps/iodemo/cuda/: Makefile.am
test/apps/iodemo/cuda_util/: Makefile.am  cuda_util.cu  cuda_util.h
test/apps/iodemo/kaki/: Makefile.am  cuda_util.cu  kaki
test/gtest/common/: mem_buffer.cc
test/gtest/ucp/: test_ucp_am.cc
test/gtest/ucs/: test_config.cc
test/gtest/uct/: test_p2p_rma.cc  uct_p2p_test.cc  uct_p2p_test.h  uct_test.cc  uct_test.h
test/gtest/uct/ib/: test_rc.cc
