# aaif HAVE_CUDA

# cuda_utils_LTLIBRARIES = libcudautil.la
# CC = nvcc

# cuda_utils_SOURCES = cuda_util.cu


# endif

bin_PROGRAMS = \
    kaki

# kaki_CFLAGS = $(CFLAGS_PEDANTIC)    

kaki_SOURCES = \
    kaki.cc
kaki_CFLAGS   = $(BASE_CFLAGS)
kaki_CPPFLAGS = $(BASE_CPPFLAGS)
kaki_LDFLAGS  = 
kaki_LDADD    = 